objects/Content_Migration__c.object
<CustomObject>
    <description>This object keeps track of images that need to be migrated to ContentDocument on Chatter</description>
    <fields>
        <fullName>Content_Reference_Url__c</fullName>
        <description>Url of the content reference, as stored on the body of the Chatter Questions and Answers records</description>
        <label>Content Reference Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Record_Id__c</fullName>
        <description>Id of the feedItem or feedComment that will be updated with the new Content</description>
        <label>Feed Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Scope__c</fullName>
        <label>Network Scope</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_QA_record_Id__c</fullName>
        <description>Id of the Question or Reply record where the url is referenced</description>
        <label>Original QA record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Content Migration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Content_Reference_Url__c</columns>
        <columns>Feed_Record_Id__c</columns>
        <columns>Network_Scope__c</columns>
        <columns>Original_QA_record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Content Migration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contents Migration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>